--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
-.App {
+/* .app{
+   background-color: green;
+} */
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +43,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
