--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -78,7 +78,10 @@
     .navbar_flex1 > div{
         width: fit-content;
         padding: 0;
+        padding-right: 15px;
         margin: 20px 0 0 20px;
         /* margin-right: 0; */
     }
+
+
 }
